# speech-form-filling-demo

./: .gitignore  ARCHITECTURE.md  GUARDRAIL_RISKS.md  README.md  audio_guardrail.py  litellm_config.yaml  pyproject.toml  start_litellm.py
app/: browser.py  byok.py  guardrails.py  main.py  profile.py
app/forms/: __init__.py  base.py
app/forms/it_request/: __init__.py  fill.py  instructions.md  schema.py
app/forms/laptop/: __init__.py  fill.py  instructions.md  schema.py
app/forms/taxi/: __init__.py  fill.py  instructions.md  schema.py
chrome-extension/: MICROPHONE-FIX.md  OFFSCREEN-AUDIO.md  README-HYBRID.md  README-V2.md  README.md  audio-processor.js  background.js  content.js  debug-mic.html  form-schemas.js  guardrail.js  manifest.json  offscreen.html  offscreen.js  pcm-processor.js  permission-request.html  permission-request.js  sidepanel-hybrid.html  sidepanel-hybrid.js  sidepanel-v2.css  sidepanel-v2.html  sidepanel-v2.js  sidepanel.css  sidepanel.html  sidepanel.js
scripts/: dump_forms.py  test_fill.py
static/: app.js  index.html  logs.html  logs.js  styles.css
tests/: test_batch_audio.py  test_byok_realtime.py
