[project]
name = "speech-form-filling-demo"
version = "0.1.0"
description = "Voice-first form filling demo with request logs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.27.0",
  "websockets>=12.0",
  "python-dotenv>=1.0.0",
  "litellm[proxy]==1.82.3",
]

[tool.uv]
package = false
